2006-02-10 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/TreeView_Detail.cc: finally fixed #169683!! ( party, party! :p )
	* include/Win_GParted.h,
	  src/Win_GParted.cc,
	  src/main.cc: cleanups
	
2006-02-09 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Dialog_Progress.cc: set a min. width for detailstree instead of
	  deducing it from the textlength.
	* src/VBox_VisualDisk.cc: small fix to reap 'lost' pixels.
	
2006-02-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* include/Win_GParted.h,
	  src/Win_GParted.cc: it shouldn't be possible to remove an extended
	  partition which contains logicals.
	* src/TreeView_Detail.cc: only show mountpoint column when there is
	  mountinfo.

2006-02-08 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* include/Win_GParted.h,
	  src/Win_GParted.cc: added support for activating swap (#392672)

2006-02-07 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Dialog_Progress.cc: commented set_do_overwrite_confirmation()
	  since it was only introduced since gtkmm-2.8 and i don't want to
	  raise the deps that high just yet.

2006-02-07 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Win_GParted.cc: removed warning about busy device. It's not
	  really needed and it confuses people.
	* include/Operation.h: set default status of operationdetails to NONE
	* include/Dialog_Progress.h,
	  src/Dialog_Progress.cc: implemented export of operationdetails to
	  external file. This can be very usefull for debugging. (#329968)
	
2006-02-02 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  include/Win_GParted.h,
	  src/GParted_Core.cc,
	  src/Win_GParted.cc,
	  src/main.cc: added support for commandline arguments (#329414)

2006-02-02 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/TreeView_Detail.h,
	  src/TreeView_Detail.cc: added mountpointcolumn (#304688)
	* include/Win_GParted.h,
	  src/Win_GParted.cc: added submenu 'Devices' which allows one to
	  select devices from the menu (#329415)
	