@@ -7,7 +7,7 @@ EXTRA_DIST = \
         Frame_Resizer_Base.h\
 	i18n.h\
         Partition.h  \
-	VBox_VisualDisk.h \
+	FrameVisualDisk.h \
         Dialog_Partition_Info.h\
 	ext3.h  \
 	Frame_Resizer_Extended.h\
