@@ -14,7 +14,6 @@ src/Operation.cc
 src/Partition.cc
 src/TreeView_Detail.cc
 src/Utils.cc
-src/VBox_VisualDisk.cc
 src/Win_GParted.cc
 src/ext2.cc
 src/ext3.cc
