@@ -1,3 +1,7 @@
+2006-02-11 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* removed legend after discussion with usability guys
+
 2006-02-10 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/TreeView_Detail.cc: finally fixed #169683!! ( party, party! :p )
